Disable join step as we are using a single server

--- a/ansible/roles/citrix-storefront/tasks/main.yml
+++ b/ansible/roles/citrix-storefront/tasks/main.yml
@@ -5,5 +5,5 @@
 - name: Init Citrix Storefront
   include: init.yml
 
-- name: Join Citrix Storefront
-  include: join.yml
+# - name: Join Citrix Storefront
+#   include: join.yml
