--- a/ansible/roles/remote-gateway/tasks/main.yml
+++ b/ansible/roles/remote-gateway/tasks/main.yml
@@ -40,6 +40,10 @@
     state: present
     enabled: yes
 
+- name: Debug
+  ansible.builtin.debug:
+    msg: '{{ cert_import.thumbprints[0] }}'
+
 - name: Configure the Remote Desktop Gateway
   community.windows.win_rds_settings:
     certificate_hash: '{{ cert_import.thumbprints[0] }}'
