--- a/ansible/roles/remote-gateway/tasks/main.yml
+++ b/ansible/roles/remote-gateway/tasks/main.yml
@@ -42,7 +42,7 @@
 
 - name: Debug
   ansible.builtin.debug:
-    msg: '{{ cert_import.thumbprints[0] }}'
+    msg: '{{ cert_import.thumbprints }}'
 
 - name: Configure the Remote Desktop Gateway
   community.windows.win_rds_settings:
