--- a/ansible/roles/remote-gateway/tasks/main.yml
+++ b/ansible/roles/remote-gateway/tasks/main.yml
@@ -53,7 +53,7 @@
   community.windows.win_rds_cap:
     name: Remote Gateway CAP
     user_groups:
-      - 'GO\Domain Admins'
+      - '{{ domain_name }}\RD Gateway Users'
     session_timeout: 120
     session_timeout_action: disconnect
     allow_only_sdrts_servers: yes
