--- a/ansible/roles/domain-join/tasks/main.yml
+++ b/ansible/roles/domain-join/tasks/main.yml
@@ -3,10 +3,12 @@
       $env:COMPUTERNAME
   register: hostname
 
-- name: Set strong cryptography
+- name: Set strong cryptography & register NuGet
   win_shell: |
       Set-ItemProperty -Path 'HKLM:\SOFTWARE\Wow6432Node\Microsoft\.NetFramework\v4.0.30319' -Name 'SchUseStrongCrypto' -Value '1' -Type DWord
       Set-ItemProperty -Path 'HKLM:\SOFTWARE\Microsoft\.NetFramework\v4.0.30319' -Name 'SchUseStrongCrypto' -Value '1' -Type DWord
+
+      Register-PackageSource -provider NuGet -name nugetRepository -location https://www.nuget.org/api/v2
   vars:
     ansible_become: yes
     ansible_become_user: system
