Getting out of options...

--- a/ansible/roles/domain-join/tasks/main.yml
+++ b/ansible/roles/domain-join/tasks/main.yml
@@ -5,15 +5,10 @@
 
 - name: Set strong cryptography & register NuGet
   win_shell: |
-      [Net.ServicePointManager]::SecurityProtocol = [Net.SecurityProtocolType]::Tls12
-
       Set-ItemProperty -Path 'HKLM:\SOFTWARE\Wow6432Node\Microsoft\.NetFramework\v4.0.30319' -Name 'SchUseStrongCrypto' -Value '1' -Type DWord
       Set-ItemProperty -Path 'HKLM:\SOFTWARE\Microsoft\.NetFramework\v4.0.30319' -Name 'SchUseStrongCrypto' -Value '1' -Type DWord
 
-      Install-PackageProvider -Name NuGet -Force -Confirm:$false -ErrorAction SilentlyContinue
-
-      Install-Module -Name PowerShellGet -RequiredVersion 2.2.5 -Force -Confirm:$false -ErrorAction SilentlyContinue
-      Install-Module -Name PackageManagement -Force -Confirm:$false -ErrorAction SilentlyContinue
+      Find-PackageProvider -Name Nuget -ForceBootstrap -IncludeDependencies -Force
   vars:
     ansible_become: yes
     ansible_become_user: system
