--- a/ansible/roles/domain-join/tasks/main.yml
+++ b/ansible/roles/domain-join/tasks/main.yml
@@ -13,7 +13,9 @@
     ansible_become_method: runas
 
 - name: Install NuGet
-  win_shell: Find-PackageProvider -Name Nuget -ForceBootstrap -IncludeDependencies -Force
+  win_shell: |
+      Register-PackageSource -provider NuGet -name nugetRepository -location https://www.nuget.org/api/v2
+      Find-PackageProvider -Name Nuget -ForceBootstrap -IncludeDependencies -Force
 
 - name: Check for xDSCDomainjoin DSC Powershell module
   win_psmodule:
