--- a/ansible/roles/domain-join/tasks/main.yml
+++ b/ansible/roles/domain-join/tasks/main.yml
@@ -7,6 +7,10 @@
   win_psmodule:
     name: xDSCDomainjoin
     state: present
+  retries: 5
+  delay: 30
+  register: result
+  until: result.rc == 0
 
 - name: Domain join
   win_dsc:
