--- a/ansible/roles/domain-controller/tasks/main.yml
+++ b/ansible/roles/domain-controller/tasks/main.yml
@@ -75,6 +75,8 @@
     state: present
   retries: 5
   delay: 30
+  register: result
+  until: result.rc == 0
 
 - name: Create reverse DNS zone
   win_dsc:
