--- a/ansible/roles/mssql-studio/tasks/main.yml
+++ b/ansible/roles/mssql-studio/tasks/main.yml
@@ -2,6 +2,7 @@
 - name: Install Microsoft SQL Server Management Studio
   win_package:
     path: "https://aka.ms/ssmsfullsetup"
+    arguments: /install /quiet /norestart
     state: present
     expected_return_code: [0, 3, 3010]
     creates_path: "C:\\Program Files (x86)\\Microsoft SQL Server Management Studio 18\\Common7\\IDE"
