--- a/ansible/roles/loadgen/tasks/main.yml
+++ b/ansible/roles/loadgen/tasks/main.yml
@@ -73,12 +73,10 @@
   when: loadgen_director.stat.exists == False
 
 - name: Run AutoUpdater for LoadGen Director
-  win_command: '"C:\Program Files\LoadGen\AutoUpdater.exe" -i "C:\ProgramData\LoadGen\Download\Director\AutoUpdate.dat"'
+  win_command: AutoUpdater.exe -i C:\ProgramData\LoadGen\Download\Director\AutoUpdate.dat
+  args:
+    chdir: C:\Program Files\LoadGen
   when: loadgen_director.stat.exists == False
-  vars:
-    ansible_become: yes
-    ansible_become_user: "{{ ansible_user }}"
-    ansible_become_method: runas
 
 - name: Check if LoadGen Studio is installed
   win_stat:
@@ -119,7 +117,7 @@
   when: loadgen_analyzer.stat.exists == False
 
 - name: Run AutoUpdater for LoadGen Analyzer
-  win_command: '"C:\Program Files\LoadGen\AutoUpdater.exe" -i "C:\ProgramData\LoadGen\Download\Analyzer\AutoUpdate.dat"'
+  win_command: 'AutoUpdater.exe -i "C:\ProgramData\LoadGen\Download\Analyzer\AutoUpdate.dat"'
   when: loadgen_analyzer.stat.exists == False
 
 - name: Remove ProgramData download directory structure for Director
