Trying to use win_shell

--- a/ansible/roles/loadgen/tasks/main.yml
+++ b/ansible/roles/loadgen/tasks/main.yml
@@ -73,14 +73,10 @@
   when: loadgen_director.stat.exists == False
 
 - name: Run AutoUpdater for LoadGen Director
-  win_command: AutoUpdater.exe -i C:\ProgramData\LoadGen\Download\Director\AutoUpdate.dat
+  win_shell : AutoUpdater.exe -i C:\ProgramData\LoadGen\Download\Director\AutoUpdate.dat
   args:
     chdir: C:\Program Files\LoadGen
   when: loadgen_director.stat.exists == False
-  vars:
-    ansible_become: yes
-    ansible_become_method: runas
-    ansible_become_user: "{{ ansible_user }}"
 
 - name: Check if LoadGen Studio is installed
   win_stat:
