Restore the command and tried to increase the WinRM memory for the session

--- a/ansible/roles/loadgen/tasks/main.yml
+++ b/ansible/roles/loadgen/tasks/main.yml
@@ -73,10 +73,9 @@
   when: loadgen_director.stat.exists == False
 
 - name: Run AutoUpdater for LoadGen Director
-  win_shell: Start-Process -FilePath "AutoUpdater.exe" --ArgumentList "-i C:\ProgramData\LoadGen\Download\Director\AutoUpdate.dat"
-  args:
-    chdir: C:\Program Files\LoadGen
+  win_command: '"C:\Program Files\LoadGen\AutoUpdater.exe" -i "C:\ProgramData\LoadGen\Download\Director\AutoUpdate.dat"'
   when: loadgen_director.stat.exists == False
+
 
 - name: Check if LoadGen Studio is installed
   win_stat:
