--- a/ansible/roles/loadgen/tasks/main.yml
+++ b/ansible/roles/loadgen/tasks/main.yml
@@ -34,27 +34,6 @@
     expected_return_code: [0]
     state: present
 
-# - name: Check if LoadGen Agent is installed
-#   win_stat:
-#     path: C:\Program Files\LoadGen\LoadGen Agent\LoadGen LoadBot Agent.exe
-#   register: loadgen_agent
-
-# - name: Create ProgramData directory structure for Agent
-#   win_file:
-#     path: C:\ProgramData\LoadGen\Download\Agent
-#     state: directory
-#   when: loadgen_agent.stat.exists == False
-
-# - name: Download LoadGen Agent
-#   win_get_url:
-#     url: "https://download.loadgen.cloud/loadgen/{{ loadgen_version }}/LoadGenAgent.txt"
-#     dest: C:\ProgramData\LoadGen\Download\Agent\AutoUpdate.dat
-#   when: loadgen_agent.stat.exists == False
-
-# - name: Run AutoUpdater for LoadGen Agent
-#   win_command: '"C:\Program Files\LoadGen\AutoUpdater.exe" -i "C:\ProgramData\LoadGen\Download\Agent\AutoUpdate.dat"'
-#   when: loadgen_agent.stat.exists == False
-
 - name: Check if LoadGen Director is installed
   win_stat:
     path: C:\Program Files\LoadGen\LoadGen Director\LoadGen Director.exe
@@ -75,6 +54,11 @@
 - name: Run AutoUpdater for LoadGen Director
   win_command: C:\Program Files\LoadGen\AutoUpdater.exe -i C:\ProgramData\LoadGen\Download\Director\AutoUpdate.dat
   when: loadgen_director.stat.exists == False
+  vars:
+    ansible_become: yes
+    ansible_become_user: administrator@go.euc
+    ansible_become_password: "{{ ansible_password }}"
+    ansible_become_method: runas
 
 - name: Check if LoadGen Studio is installed
   win_stat:
