--- a/ansible/roles/loadgen/tasks/main.yml
+++ b/ansible/roles/loadgen/tasks/main.yml
@@ -52,13 +52,15 @@
   when: loadgen_director.stat.exists == False
 
 - name: Run AutoUpdater for LoadGen Director
-  win_command: '"C:\Program Files\LoadGen\AutoUpdater.exe" -i "C:\ProgramData\LoadGen\Download\Director\AutoUpdate.dat"'
+  win_command: AutoUpdater.exe -i "C:\ProgramData\LoadGen\Download\Director\AutoUpdate.dat"
+  args:
+    chdir: C:\Program Files\LoadGen\
   when: loadgen_director.stat.exists == False
-  vars:
-    ansible_become: yes
-    ansible_become_user: administrator@go.euc
-    ansible_become_password: "{{ ansible_password }}"
-    ansible_become_method: runas
+  # vars:
+  #   ansible_become: yes
+  #   ansible_become_user: administrator@go.euc
+  #   ansible_become_password: "{{ ansible_password }}"
+  #   ansible_become_method: runas
 
 - name: Check if LoadGen Studio is installed
   win_stat:
