--- a/ansible/roles/loadgen/tasks/main.yml
+++ b/ansible/roles/loadgen/tasks/main.yml
@@ -56,11 +56,11 @@
   args:
     chdir: C:\Program Files\LoadGen\
   when: loadgen_director.stat.exists == False
-  # vars:
-  #   ansible_become: yes
-  #   ansible_become_user: administrator@go.euc
-  #   ansible_become_password: "{{ ansible_password }}"
-  #   ansible_become_method: runas
+  vars:
+    ansible_become: yes
+    ansible_become_user: "{{ ansible_user }}" #administrator@go.euc
+    ansible_become_password: "{{ ansible_password }}"
+    ansible_become_method: runas
 
 - name: Check if LoadGen Studio is installed
   win_stat:
