--- a/ansible/roles/loadgen/tasks/main.yml
+++ b/ansible/roles/loadgen/tasks/main.yml
@@ -52,7 +52,7 @@
   when: loadgen_director.stat.exists == False
 
 - name: Run AutoUpdater for LoadGen Director
-  win_command: AutoUpdater.exe -i "C:\ProgramData\LoadGen\Download\Director\AutoUpdate.dat"
+  win_command: 'AutoUpdater.exe -i "C:\ProgramData\LoadGen\Download\Director\AutoUpdate.dat"'
   args:
     chdir: C:\Program Files\LoadGen\
   when: loadgen_director.stat.exists == False
