--- a/ansible/roles/loadgen/tasks/main.yml
+++ b/ansible/roles/loadgen/tasks/main.yml
@@ -51,16 +51,24 @@
     dest: C:\ProgramData\LoadGen\Download\Director\AutoUpdate.dat
   when: loadgen_director.stat.exists == False
 
-- name: Run AutoUpdater for LoadGen Director
-  win_command: 'AutoUpdater.exe -i "C:\ProgramData\LoadGen\Download\Director\AutoUpdate.dat"'
-  args:
-    chdir: C:\Program Files\LoadGen\
+
+- name: Run AutoUpdater for LoadGen Director PSEXEC style
+  community.windows.win_psexec:
+    command: '"C:\Program Files\LoadGen\AutoUpdater.exe" -i "C:\ProgramData\LoadGen\Download\Director\AutoUpdate.dat"'
+    interactive: yes
   when: loadgen_director.stat.exists == False
-  vars:
-    ansible_become: yes
-    ansible_become_user: "{{ ansible_user }}" #administrator@go.euc
-    ansible_become_password: "{{ ansible_password }}"
-    ansible_become_method: runas
+
+
+# - name: Run AutoUpdater for LoadGen Director
+#   win_command: 'AutoUpdater.exe -i "C:\ProgramData\LoadGen\Download\Director\AutoUpdate.dat"'
+#   args:
+#     chdir: C:\Program Files\LoadGen\
+#   when: loadgen_director.stat.exists == False
+#   vars:
+#     ansible_become: yes
+#     ansible_become_user: "{{ ansible_user }}" #administrator@go.euc
+#     ansible_become_password: "{{ ansible_password }}"
+#     ansible_become_method: runas
 
 - name: Check if LoadGen Studio is installed
   win_stat:
