--- a/ansible/roles/loadgen/tasks/main.yml
+++ b/ansible/roles/loadgen/tasks/main.yml
@@ -1,8 +1,19 @@
+
+- name: Get WinRM memory configuration
+  win_shell: (Get-Item -Path WSMan:\localhost\Shell\MaxMemoryPerShellMB).Value
+  register: winrm_mem
+
+- name: Cleanup fact for WinRM memory
+  ansible.builtin.set_fact:
+    winrm_memory: winrm_mem.stdout | trim
+
 - name: Set the WinRM memory to 4GB # This is required to download LoadGen data
   win_shell: Set-Item -Path WSMan:\localhost\Shell\MaxMemoryPerShellMB -Value 4096
+  when: winrm_memory != "4096"
 
 - name: Force reboot to apply WinRM config
   win_reboot:
+  when: winrm_memory != "4096"
 
 - name: Create directory structure
   win_file:
