--- a/ansible/roles/loadgen/tasks/datasource.yml
+++ b/ansible/roles/loadgen/tasks/datasource.yml
@@ -35,8 +35,17 @@
   win_xml:
    path: C:\ProgramData\LoadGen\Director\LoadGenDatasources.xml
    xpath: "/*[local-name()='DatasourcesDataset']/*[local-name()='Datasources']/*[local-name()='IntegratedSecurity']"
-   fragment: "{{ datasource_integrated_security | lower }}"
+   fragment: "false"
    type: text
+  when: lookup('env', 'platform') == 'azure' 
+
+- name: Set the LoadGen Datasources configuration property IntegratedSecurity
+  win_xml:
+   path: C:\ProgramData\LoadGen\Director\LoadGenDatasources.xml
+   xpath: "/*[local-name()='DatasourcesDataset']/*[local-name()='Datasources']/*[local-name()='IntegratedSecurity']"
+   fragment: "true"
+   type: text
+  when: lookup('env', 'platform') == 'azure' 
 
 - name: Set the LoadGen Datasources configuration property Password
   win_xml:
