--- a/ansible/mssql.yml
+++ b/ansible/mssql.yml
@@ -14,6 +14,14 @@
   roles:
   - domain-join
   - mssql
+  
+  tasks:
+    - name: Create databases
+      community.general.mssql_db:
+        name: "{{ item }}"
+        state: present
+      loop:
+      - LoadGen
   vars:
     dns_domain_name: 'GO.EUC'
     domain_name: GO
