Create the database using sqlcmd to avoid the dependecy on the community module

--- a/ansible/mssql.yml
+++ b/ansible/mssql.yml
@@ -17,9 +17,7 @@
   
   tasks:
     - name: Create databases
-      community.general.mssql_db:
-        name: "{{ item }}"
-        state: present
+      win_shell: "sqlcmd -Q 'CREATE DATABASE {{ item }}'"
       loop:
       - LoadGen
   vars:
