--- a/ansible/roles/loadgen/tasks/main.yml
+++ b/ansible/roles/loadgen/tasks/main.yml
@@ -141,9 +141,9 @@
 - name: Configure the LoadGen Datasource
   include_tasks: datasource.yml
 
-# - name: Configure the LoadGen Options
-#   include: options.yml
+- name: Configure the LoadGen Options
+  include_tasks: options.yml
 
-# - name: Configure the LoadGen RunAsProfiles
-#   include: profiles.yml
+- name: Configure the LoadGen RunAsProfiles
+  include_tasks: profiles.yml
 
