--- a/ansible/roles/domain-controller/tasks/main.yml
+++ b/ansible/roles/domain-controller/tasks/main.yml
@@ -122,3 +122,6 @@
     ansible_become: yes
     ansible_become_user: system
     ansible_become_method: runas
+
+- name: Domain configuration
+  include_tasks: config.yml
