Create the default storefront site via the task

--- a/ansible/roles/citrix-storefront/tasks/init.yml
+++ b/ansible/roles/citrix-storefront/tasks/init.yml
@@ -33,17 +33,19 @@
     path: C:\inetpub\wwwroot\Citrix
   register: sf_info
 
-# - name: Start Create task
-#   win_shell: Start-ScheduledTask -TaskName "Create SF Cluster"
-#   when: sf_info.stat.exists == False
-# - name: Wait for passcode file
-#   win_wait_for:
-#     path: C:\Logs\passcode.txt
-#     delay: 10
-#   when: sf_info.stat.exists == False
-# - name: Slurp passcode file
-#   slurp:
-#     src: C:\Logs\passcode.txt
-#   register: passcode
-# - name: Some debug
-#   debug: msg="{{ passcode['content'] | b64decode | trim }}"
+- name: Start Create task
+  win_shell: Start-ScheduledTask -TaskName "Create SF Cluster"
+  when: sf_info.stat.exists == False
+
+- name: Wait for passcode file
+  win_wait_for:
+    path: C:\Logs\passcode.txt
+    delay: 10
+  when: sf_info.stat.exists == False
+
+- name: Slurp passcode file
+  slurp:
+    src: C:\Logs\passcode.txt
+  register: passcode
+- name: Some debug
+  debug: msg="{{ passcode['content'] | b64decode | trim }}"
