--- a/ansible/roles/citrix-storefront/tasks/init.yml
+++ b/ansible/roles/citrix-storefront/tasks/init.yml
@@ -16,26 +16,21 @@
   win_copy:
     src: createsfsite.ps1
     dest: C:\Windows\Temp\
-  
-- name: Create task to run a PS script as SYSTEM service
-  win_scheduled_task:
-    name: Create SF Cluster
-    description: Run a PowerShell script
-    actions:
-    - path: C:\Windows\System32\WindowsPowerShell\v1.0\powershell.exe
-      arguments: -ExecutionPolicy Unrestricted -File C:\Windows\Temp\createsfsite.ps1
-    username: SYSTEM
-    run_level: highest
-    state: present
-  
+    
 - name: Storefront folder stat
   win_stat:
     path: C:\inetpub\wwwroot\Citrix
   register: sf_info
 
-- name: Start Create task
-  win_shell: Start-ScheduledTask -TaskName "Create SF Cluster"
+- name: Start storefront script
+  win_shell: C:\Windows\Temp\createsfsite.ps1
+  async: 300
+  poll: 0
   when: sf_info.stat.exists == False
+  vars:
+    ansible_become: yes
+    ansible_become_user: system
+    ansible_become_method: runas
 
 - name: Wait for passcode file
   win_wait_for:
